cabal-version: 2.2

author: Mitchell Rosen
bug-reports: https://github.com/mitchellwrosen/br/issues
copyright: Copyright (C) 2022-2023 Mitchell Rosen
description: An application monad.
homepage: https://github.com/mitchellwrosen/br
license: BSD-3-Clause
license-file: LICENSE
maintainer: Mitchell Rosen <mitchellwrosen@gmail.com>
name: crio
stability: experimental
synopsis: An application monad
tested-with: GHC == 9.2.8, GHC == 9.4.7, GHC == 9.6.2
version: 0.1.0

extra-source-files:
  CHANGELOG.md
  README.md

source-repository head
  type: git
  location: https://github.com/mitchellwrosen/br.git

library
  build-depends:
    base ^>= 4.16 || ^>= 4.17 || ^>= 4.18,
    mtl ^>= 2.2 || ^>= 2.3,
  default-extensions:
    BlockArguments
    DerivingStrategies
    LambdaCase
    ImplicitParams
  default-language: GHC2021
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-import-lists
    -Wno-safe
    -Wno-unsafe
  if impl(ghc >= 8.10)
    ghc-options:
      -Wno-missing-safe-haskell-mode
      -Wno-prepositive-qualified-module
  if impl(ghc >= 9.2)
    ghc-options:
      -Wno-missing-kind-signatures
  exposed-modules:
    Crio
  hs-source-dirs: src
